[package]
name = "fuzzrsmpeg"
version = "0.0.0"
rust-version = "1.65.0"


[[bin]]
name = "fuzz_rsmpeg_dump"
path = "./fuzz_rsmpeg_dump.rs"
test = false
doc = false

[dependencies]
rsmpeg = { path = "/rsmpeg" }      
afl = "0.4"
libc = "0.2"
paste = "1.0"

[dev-dependencies]
anyhow = "1.0.57"
glfw = "0.45.0"
gl = "0.14.0"
cstr = "0.2.10"
once_cell = "1.12.0"
tempdir = "0.3.7"
